# Weaviate-multimodal-search

./: README.md  create_collections.ipynb  pyproject.toml
