[project]
name = "multimodal-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "sentence-transformers>=4.1.0",
    "transformers>=4.51.3",
    "weaviate-client>=4.14.3",
]
